--- a/resources/css/quries.css
+++ b/resources/css/quries.css
@@ -87,10 +87,6 @@
     margin: 0 0 4% 0;
   }
 
-  .main-nav {
-    display: none;
-  }
-
   h1 {
     font-size: 180%;
   }
@@ -137,6 +133,54 @@
   .btn-app img {
     height: 40px;
   }
+
+  /* Mobile Nav */
+
+  .main-nav{
+    display: none;
+  }
+  
+  .main-nav {
+    float: left;
+    margin-top: 25px;
+    margin-left: 15px;
+  }
+
+  .mobile-nav-icon {
+    display: inline-block;
+  }
+
+  .main-nav li {
+    display: block;
+  }
+
+  .main-nav li a:link,
+  .main-nav li a:visited {
+    display: block;
+    border: 0;
+    padding: 8px 0;
+    font-size: 100%;
+  }
+
+  .sticky .main-nav {
+    margin-top: 10px;
+  }
+
+  .sticky .main-nav li a:link,
+  .sticky .main-nav li a:visited {
+    padding: 8px 0;
+  }
+
+  .sticky .mobile-nav-icon{
+    margin-top: 10px;
+  }
+
+  .sticky .mobile-nav-icon i {
+    color: #555;
+  }
+
+
+  
 }
 
 /* for small phones: from 0px to 480px */
